# OrderProcessor

./: .clang-format  .git-blame-ignore-revs  .gitignore  .notes.swp  AUDIT_REPORT.md  CLAUDE.md  CMakeLists.txt  OrderProcessor.sln  README.md  VersionHistory.txt  audit_report_20260120_152745.md  benchmark_results.json  license.txt  readme.txt  toDo.lst
.github/workflows/: benchmark.yml  build-test.yml  format.yml  sanitizers.yml
app/: CMakeLists.txt  EnumStrings.h  FixGateway.cpp  FixGateway.h  FixOutQueues.cpp  FixOutQueues.h  FixServer.cpp  FixServer.h  JsonSerializer.cpp  JsonSerializer.h  MetricsPublisher.cpp  MetricsPublisher.h  MultiOutQueues.cpp  MultiOutQueues.h  SessionManager.cpp  SessionManager.h  WsOutQueues.cpp  WsOutQueues.h  WsServer.cpp  WsServer.h  WsSession.cpp  WsSession.h  main.cpp  seed_data.cpp
bench/: CMakeLists.txt  EventProcessingBench.cpp  FixGatewayBench.cpp  InterlockCacheBench.cpp  NumaAllocatorBench.cpp  OrderMatchingBench.cpp  OrderParamsLayoutBench.cpp  StateMachineBench.cpp  TransactionScopePoolBench.cpp
config/: fix.cfg
docker/: .dockerignore  .env.example  Dockerfile.oms-frontend  Dockerfile.oms-server  README.md  docker-compose.yml  nginx.conf
docker/init-db/: 001_schema.sql
docs/: ARCHITECTURE.md  DEBUGGING.md  FIX_TEST_SUITE.md  QUICKFIX_DEPENDENCY.md
scripts/: benchmark-regression.sh
src/: AccountCodec.cpp  AccountCodec.h  AllocateCache.cpp  AllocateCache.h  CMakeLists.txt  CacheAlignedAtomic.h  CancelOrderDeferedEvent.cpp  ClearingCodec.cpp  ClearingCodec.h  CpuAffinity.h  DataModelDef.cpp  DataModelDef.h  DeferedEvents.h  EntryFilter.cpp  EntryFilter.h  EventDef.h  EventManager.cpp  EventManager.h  ExchUtils.cpp  ExchUtils.h  ExecutionDeferedEvent.cpp  FileStorage.cpp  FileStorage.h  FileStorageDef.h  FilterImpl.cpp  FilterImpl.h  HugePages.h  IdTGenerator.cpp  IdTGenerator.h  IncomingQueues.cpp  IncomingQueues.h  InstrumentCodec.cpp  InstrumentCodec.h  InterLockCache.cpp  InterLockCache.h  LMDBStorage.cpp  LMDBStorage.h  Logger.cpp  Logger.h  MatchOrderDeferedEvent.cpp  (+65 more)
src/oms-frontend/: index.html  package-lock.json  package.json  vite.config.ts
src/oms-frontend/src/: App.tsx
src/oms-frontend/src/components/: AlertsPanel.tsx  DashboardTab.tsx  ExecutionBlotter.tsx  MemoryAdminTab.tsx  OrderBlotter.tsx  OrderBookPanel.tsx  OrderEntryPanel.tsx  PositionSummary.tsx
src/oms-frontend/src/hooks/: useAlerts.ts  useOmsWebSocket.ts
src/oms-frontend/src/types/: alerts.ts  enums.ts  index.ts  websocket.ts
src/oms-frontend/src/utils/: constants.ts  csv.ts  format.ts
test/: CMakeLists.txt  CacheAlignedAtomicTest.cpp  CodecsTest.cpp  CpuAffinityHugePagesTest.cpp  DeferedEventsTest.cpp  DocConsistencyTest.cpp  EventBenchmarkTest.cpp  FileStorageTest.cpp  FiltersTest.cpp  FixEndToEndTest.cpp  FixFullPipelineTest.cpp  FixGatewayTest.cpp  FxSwapTest.cpp  IdTGeneratorTest.cpp  IncomingQueuesTest.cpp  IntegrationTest.cpp  InterlockCacheTest.cpp  LMDBStorageTest.cpp  NLinkTreeTest.cpp  NumaAllocatorTest.cpp  OrderBookTest.cpp  OrderMatcherTest.cpp  OrderStorageTest.cpp  OutgoingQueuesTest.cpp  PGEnumStringsTest.cpp  PGRequestBuilderTest.cpp  PGWriteBehindTest.cpp  ProcessorTest.cpp  QueuesManagerTest.cpp  StateMachineHelper.cpp  StateMachineHelper.h  StateMachineTest.cpp  StatesTest.cpp  StorageRecordDispatcherTest.cpp  SubscriptionTest.cpp  TaskManagerTest.cpp  TestAux.cpp  TestAux.h  TestFixtures.h  TestMain.cpp  (+22 more)
test/mocks/: MockDefered.h  MockOrderBook.h  MockQueues.h  MockStorage.h  MockTasks.h  MockTransaction.h
